Disable the website build on publish

--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -21,14 +21,14 @@ Explore the core ideas behind Behave Graphs to get started:
 <CardGrid stagger>
 	<Card title="Getting Started" icon="rocket">
 		Learn how to set up your first Behave Graph project and run your first graph.
-		[Read the Getting Started guide](/intro/getting-started/)
+		[Read the Getting Started guide](./intro/getting-started/)
 	</Card>
 	<Card title="Core Concepts" icon="puzzle">
 		Understand the fundamental building blocks: nodes, values, execution model, and more.
-		[Explore Core Concepts](/core-concepts/nodes/)
+		[Explore Core Concepts](./core-concepts/nodes/)
 	</Card>
 	<Card title="Developer Guide" icon="setting">
 		Dive into advanced topics, custom node creation, and integration with your projects.
-		[Access the Developer Guide](/guides/developer-guide/)
+		[Access the Developer Guide](./guides/developer-guide/)
 	</Card>
 </CardGrid>
